fixed footer spacing and some Case Study spacing

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 main {
-  margin: 4.8em 16px 6.0em 16px;
+  margin: 6.4em 16px 9.6em 16px;
   height: auto;
 }
 
@@ -54,7 +54,7 @@ img {
 }
 
 /*=============================== Typography ===============================*/
-h1, h2, h3, h4, h5, p, a, button, li, .label, input, textarea, label {
+h1, h2, h3, h4, h5, p, a, button, li, .label, input, textarea, label, figcaption {
   line-height: 1.4;
 }
 
@@ -76,7 +76,7 @@ h3, .quote {
   font-size: 2rem;
 }
 
-h4 {
+h4, .CORE-quote {
   font-size: 1.8rem;
 }
 
@@ -95,7 +95,7 @@ h6, .up_description {
 figcaption {
   color: #353535;
   font-size: 1.2rem;
-  margin-top: 0.5em;
+  margin-top: 0.33em;
 }
 
 p {
@@ -136,7 +136,7 @@ p {
   }
 
   p {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin-top: 1.125em;
   }
 
@@ -149,7 +149,7 @@ p {
 ul, ol {
   list-style-position: outside;
   margin-left: 32px;
-  margin-top: 1.2em;
+  margin-top: 1.6em;
 }
 
 ul {
@@ -166,28 +166,32 @@ ol {
 }
 
 .mini_list_item, .up_mini_list_item {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 
-.goals, .demo, .frust, .tools, .duration, .deliverables, .what {
-  margin-top: 1.2em;
+.goals, .frust {
+  margin-top: 0.8em;
+}
+
+.demo {
+  margin-top: 0.8em;
+}
+
+.user-name {
+  margin-top: 0.94em;
 }
 
 .items, .up_items {
-  margin-top: 0.6em;
+  margin-top: 0.4em;
 }
 
 @media (min-width: 768px) {
-  li {
+  li, .mini_list_item {
     font-size: 1.6rem;
   }
 
   ul {
     margin-top: 1.8em;
-  }
-
-  .mini_list_item {
-    font-size: 1.4rem;
   }
 }
 
@@ -231,8 +235,8 @@ a:hover {
 }
 
 @media (min-width: 768px) {
-  a {
-    font-size: 1.6rem;
+a {
+    font-size: 1.8rem;
   }
 }
 
@@ -250,6 +254,7 @@ button {
   text-decoration: none;
   width: 100%;
   cursor: pointer;
+  height: 48px;
   /* transition: 0.3s background ease; */
 }
 
@@ -287,7 +292,7 @@ button:active, button:focus, .projects button:active, .projects button:focus {
   border-style: solid;
   border-width: 1px;
   color: #0D0D0D;
-  margin-top: 1.2rem;
+  margin-top: 1.6rem;
 }
 
 .footerBtn:disabled {
@@ -316,8 +321,8 @@ input, textarea {
   color: #707070;
   display: block;
   font-size: 1.4rem;
-  margin-bottom: 0.86em;
-  margin-top: 0.43em;
+  margin-bottom: 1.1428em;
+  margin-top: 0.57em;
   padding: 0.7857em 1.1428em;
   width: 100%;
   font-family: inherit;
@@ -449,12 +454,12 @@ nav {
   }
 
   .navbar a {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: 400;
+    margin-left: 3em;;
   }
 
   .nav-link {
-    margin-left: 8.3044%;
     margin-top: 0px;
   }
 
@@ -482,26 +487,22 @@ nav {
 }
 
 .footer-content {
-  padding: 4.8em 16px 7.2em 16px;
+  padding: 6.4em 16px 9.6em 16px;
 }
 
 /*-- words --*/
 /* footer headings */
 .email, .number {
   display: block;
-  margin-top: 0.7058em;
+  margin-top: 0.941em;
 }
 
 .form_heading {
-  margin-bottom: 0.6em;
+  margin-bottom: 0.88em;
 }
 
-.contact_info {
-  margin-top: 2.4em;
-}
-
-.contact_messsage {
-  margin-top: 3.6em;
+.contact_messsage, .contact_info {
+  margin-top: 3.2em;
 }
 
 .copyright {
@@ -602,7 +603,7 @@ nav {
 }
 
 .project_1_CORE {
-  margin-top: 1.2em;
+  margin-top: 3.2em;
 }
 
 .p-container2 {
@@ -686,7 +687,7 @@ nav {
   grid-template-columns: repeat(2, 1fr);
   width: 100%;
   height: auto;
-  margin-top: 4.8em;
+  margin-top: 8em;
   grid-gap: 20px;
 }
 
@@ -700,24 +701,32 @@ nav {
 
 /*--- Words ---*/
 /* about & case studies */
-.section_1, .c-section-1 {
-  margin-top: 3.6em;
+.c-section-1 {
+  margin-top: 4em;
 }
 
-.section_2 {
-  margin-top: 2.4em;
+.first-r{
+  margin-top: 3.2em;
+}
+
+.section_2, .section_1 {
+  margin-top: 3.2em;
 }
 
 .section_3, .section_3-grid, .first {
-  margin-top: 1.2em;
+  margin-top: 2.4em;
+}
+/*
+.section_r {
+  margin-top: 1.6em; */
 }
 
 .section_4 {
-  margin-top: 0.6em;
+  margin-top: 0.8em;
 }
 
 .first_par, .first_par2 {
-  margin-top: 0.3529em;
+  margin-top: 0.47em;
 }
 
 @media (min-width: 768px) {
@@ -827,8 +836,9 @@ nav {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 20px;
+  grid-row-gap: 16px;
   grid-template-rows: auto;
-  margin-top: 1.2em;
+  margin-top: 2.4em;
 }
 
 .tools, .duration {
@@ -844,7 +854,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 2.0em;
-  margin-top: 0.6em;
+  margin-top: 0.8em;
 }
 
 /*--- Words ---*/
@@ -864,16 +874,30 @@ nav {
   margin-top: 0.7058em;
 }
 
-.first_pic, .up-pic {
-  margin-top: 0.6em;
+.first_pic {
+  margin-top: 0.8em;
 }
 
 .cp_heading {
-  margin-top: 0.4285em;
+  margin-top: 0.571em;
 }
 
 .cp_par {
   margin-top: 0px;
+}
+
+.up-p {
+  margin-top: 1.6em;
+}
+
+.CORE-quote {
+  margin-top: 0.88em;
+  color: #353535;
+  font-weight: 700;
+}
+
+.inside-p {
+  margin-top: 0.941em;
 }
 
 @media (min-width: 568px) {
@@ -923,7 +947,7 @@ nav {
   }
 
   .first {
-    margin-top: 2.4em;
+    margin-top: 3.2em;
   }
 
   .summary_list {
@@ -983,10 +1007,6 @@ nav {
   .section_4 h6 {
     margin-top: 0px;
   }
-
-  .up-p {
-    margin-top: 1.5em;
-  }
 }
 
 @media (min-width: 1152px) {
@@ -1001,11 +1021,11 @@ nav {
     grid-column: 1/2;
   }
 
-  .first, .section_2, .summary_list {
+  .first, .section_2, .summary_list, .first-r {
     grid-column: 2/4;
   }
 
-  .first {
+  .first, .first-r {
     margin-top: .8em;
   }
 
@@ -1073,23 +1093,23 @@ nav {
   .hero_pic {
     margin: 0px;
     margin-left: auto;
-    width: 338px;
+    width: 380px;
     grid-row: 1/3;
   }
 }
 
 .section_pic {
-  margin-top: 6.0em;
+  margin-top: 8.8em;
 }
 
 @media (min-width: 1152px) {
   .section_pic {
-    margin-top: 8.4em;
+    margin-top: 8.8em;
   }
 }
 
 .inside_pic {
-  margin-top: 1.2em;
+  margin-top: 1.6em;
 }
 
 @media (min-width: 1152px) {
@@ -1131,7 +1151,7 @@ nav {
 @media (min-width: 1152px) {
   .mobile_line {
     background-position: left;
-    margin-left: 4.6em;
+    margin-left: 4.8em;
   }
 }
 
@@ -1143,7 +1163,7 @@ nav {
   background-size: 24px;
   display: inline-block;
   height: 24px;
-  margin-top: 12px;
+  margin-top: 16px;
   margin-right: 24px;
   width: 24px;
 }
